IGNITE-9670: fix hadoop class loader